Fix expand and add Z-index to dropdown menu

--- a/css/default.css
+++ b/css/default.css
@@ -729,6 +729,7 @@ ul.subnav {
     position: absolute;
     top: 11px;
     right: 40px;
+    z-index: 1;
 }
 
 ul.topnav li ul.subnav li {
